fix line-up of blurred secrets

--- a/ui-modules/app-inspector/app/components/config-sensor-table/config-sensor-table.style.less
+++ b/ui-modules/app-inspector/app/components/config-sensor-table/config-sensor-table.style.less
@@ -145,7 +145,8 @@
   > .content {
     transition: none;
     text-shadow: rgba(0, 0, 0, 0.95) 10px 0px 10px;
-
+    position: relative;
+    left: -10px;
   }
   &.sensitive-field-show {
     > .content {
